[package]
name = "papertrain"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
homepage = "https://github.com/vhdirk/papertrain"
edition = "2021"
resolver = "2"
rust-version = "1.73"

[profile.release]
opt-level = "s"
lto = "off"

[profile.dev]
debug = true
opt-level = "z"
lto = "off"

[profile.dev.package.esp-wifi]
opt-level = 3


[dependencies]
defmt = { version = "^0.3.5", features = ["alloc"]}

esp-hal = { package = "esp32s3-hal", version="0.13.0", features = [
    "rt",
    "async",
    "defmt",
    "eh1",
    "embassy",
    "embassy-executor-thread",
    "embassy-time-systick",
] }

embedded-hal = "0.2.7"
embedded-hal-eh1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"]}
embedded-io  = { package = "embedded-io-async", version = "0.6.0" }
embedded-nal = { package = "embedded-nal-async", version = "0.6.0" }
embedded-hal-async = { version = "1.0.0-rc.1" }


esp-backtrace = { version = "0.9.0", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { git = "https://github.com/esp-rs/esp-println", default-features = false, features = [
    "esp32s3",
    "defmt-espflash",
    "uart",
] }
esp-alloc = "0.3.0"

embassy-executor = { version = "0.3.1", features = [
    "nightly",
    "defmt",
    "executor-thread",
] }
embassy-time = { version = "0.1.5", features = ["nightly", "defmt", "unstable-traits"] }
embassy-net = { version = "0.2.1", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "proto-ipv4",
    "proto-ipv6",
    "nightly",
] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", default-features = false, features = [
    "esp32s3",
    "wifi",
    "embedded-svc",
    "embassy-net",
    "defmt",
    "async",
    "phy-enable-usb",
    "ipv4",
    "dhcpv4",
    "dns"
] }


reqwless = { version = "0.9.0", features = ["alloc", "defmt", "embedded-tls"] }

embedded-svc = { version = "^0.26.1", default-features = false, features = ["nightly", "defmt" ] }
# epd-waveshare = { git = "https://github.com/vhdirk/epd-waveshare", branch = "async", features = ["async"]}
epd-waveshare = { package = "epd-waveshare-async", path = "../epd-waveshare"}
embedded-graphics = { version = "0.8.1" }

toml-cfg = "0.1.3"

serde = { version = "1.0.189",  default-features = false, features = ["derive", "alloc"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = {version = "^1.0.75", default-features = false }
heapless = { version = "0.7.16", default-features = false, features = ["serde"] }
embassy-futures = { version = "0.1.0", features = ["defmt"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
serde_with = { version = "3.4.0", default-features = false, features = ["macros", "alloc", "chrono_0_4", "json"] }
chrono = {version = "0.4.31", default-features = false, features = ["alloc", "serde"]}
chrono-tz = { version = "0.8.4", default-features = false, features = ["serde"] }

[patch.crates-io]
# reqwless = {path = "../reqwless"}
buffered-io = { git = "https://github.com/bugadani/buffered-io.git", branch = "old", version = "0.4.2" }
esp-hal = {package = "esp32s3-hal", path = "../esp-hal/esp32s3-hal"}

[build-dependencies]
anyhow = "^1.0.75"
