[package]
name = "papertrain"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
homepage = "https://github.com/vhdirk/papertrain"
edition = "2021"
resolver = "2"
rust-version = "1.73"

[profile.release]
opt-level = "s"
lto = "off"

[profile.dev]
debug = true
opt-level = "z"
lto = "off"

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
defmt = { version = "^0.3.5", features = ["alloc"] }

embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io = { package = "embedded-io-async", version = "0.6.0" }
embedded-nal = { package = "embedded-nal-async", version = "0.7.0" }
embedded-svc = { version = "^0.28.0", default-features = false, features = [
    "nightly",
    "defmt",
] }
embedded-graphics = { version = "0.8.1" }

esp-alloc = "0.4.0"
esp-backtrace = { version = "0.13.0", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-hal = { package = "esp32s3-hal", version = "0.15.0", features = [
    "rt",
    "async",
    "defmt",
    "eh1",
    "embassy",
    "embassy-executor-thread",
    "embassy-time-systick",
] }
esp-println = { git = "https://github.com/esp-rs/esp-println", default-features = false, features = [
    "esp32s3",
    "defmt-espflash",
    "uart",
] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", default-features = false, features = [
    "esp32s3",
    "wifi",
    "embedded-svc",
    "embassy-net",
    "defmt",
    "async",
    "phy-enable-usb",
    "ipv4",
    "dhcpv4",
    "dns",
] }

embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "defmt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "proto-ipv4",
    "proto-ipv6",
    "nightly",
] }
embassy-time = { version = "0.3.0", features = [
    "nightly",
    "defmt",
    "unstable-traits",
] }

chrono = { version = "0.4.31", default-features = false, features = [
    "alloc",
    "serde",
] }
chrono-tz = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
static_cell = { version = "2.0.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
reqwless = { version = "0.9.1", features = ["alloc", "defmt", "embedded-tls"] }
serde = { version = "1.0.189", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.4.0", default-features = false, features = [
    "macros",
    "alloc",
    "chrono_0_4",
    "json",
] }
toml-cfg = "0.1.3"
epd-waveshare = { package = "epd-waveshare-async", git = "https://github.com/vhdirk/epd-waveshare-async", branch = "main" }

[patch.crates-io]
buffered-io = { git = "https://github.com/bugadani/buffered-io.git", branch = "old", version = "0.4.2" }
esp-hal = { package = "esp32s3-hal", path = "../esp-hal/esp32s3-hal" }

[build-dependencies]
anyhow = "^1.0.75"
