[package]
name = "papertrain"
version = "0.2.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
homepage = "https://github.com/vhdirk/papertrain"
edition = "2021"
resolver = "2"
rust-version = "1.81"

[profile.release]
opt-level = "s"
lto = "off"

[profile.dev]
debug = true
opt-level = "z"
lto = "off"

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
defmt = { version = "^0.3.8", features = ["alloc"] }

embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.0" }
embedded-nal-async = { version = "0.8.0" }
embedded-svc = { version = "^0.28.0", default-features = false, features = [
    "nightly",
    "defmt",
] }
embedded-graphics = { version = "0.8.1" }

esp-alloc = { version = "0.5.0" }
esp-backtrace = { version = "0.14.1", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-hal = { version = "0.20.1", features = ["esp32s3", "async", "defmt"] }

esp-storage = { version = "0.3.0", features = ["default", "esp32s3"] }

esp-hal-embassy = { version = "0.3.0", features = [
    "esp32s3",
    "defmt",
    "executors",
    "integrated-timers",
] }

esp-println = { version = "0.11.0", default-features = false, features = [
    "esp32s3",
    "defmt-espflash",
    "uart",
] }

esp-wifi = { version = "0.9.1", default-features = false, features = [
    "esp32s3",
    "wifi",
    "embedded-svc",
    "embassy-net",
    "defmt",
    "async",
    "phy-enable-usb",
    "ipv4",
    "dhcpv4",
    "dns",
] }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }

embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "defmt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "proto-ipv4",
    "proto-ipv6",
] }
embassy-time = { version = "0.3.2", features = ["defmt"] }

chrono = { version = "0.4.31", default-features = false, features = [
    "alloc",
    "serde",
] }
chrono-tz = { version = "0.10.0", default-features = false, features = [
    "serde",
] }
static_cell = { version = "2.0.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
reqwless = { version = "0.12.1", features = ["alloc", "defmt", "embedded-tls"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "^1.0.128", default-features = false, features = [
    "alloc",
] }
serde_with = { version = "3.10.0", default-features = false, features = [
    "macros",
    "alloc",
    "chrono_0_4",
    "json",
] }

toml-cfg = "0.2.0"
epd-waveshare = { package = "epd-waveshare-async", git = "https://github.com/vhdirk/epd-waveshare-async", branch = "main" }
profont = "0.7.0"
critical-section = "1.1.3"

[patch.crates-io]
reqwless = { git = "https://github.com/aurelj/reqwless", branch="embedded-nal-async-0.8" }
# esp-hal = { package = "esp32s3-hal", path = "../esp-hal/esp32s3-hal" }

[build-dependencies]
anyhow = "^1.0.89"
